# gelato_env

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  train_base_sales_model.py
data_generators/: data_generators.py  gaussian_generators.py  sigmoid_generators.py
env/: gelateria.py  gelateria_env.py
env/markdown_trigger/: base_trigger.py  triggers.py
env/mask/: action_mask.py  current_action_only_mask.py  monotonic_markdowns_mask.py  phased_markdown_mask.py  simple_masks.py
env/reward/: base_reward.py  empty_shelf_penalty.py  multi_objective_reward.py  price_realisation_reward.py  sales_uplift_reward.py  sell_through_reward.py  simple_reward.py  termination_waste_penalty.py
env_wrapper/: output_gelateria_state_wrapper.py  wrapper.py
experiments/: base_sales_model_experiment.py  dqn_experiment.py  experiment.py  mbpo_dqn_experiment.py  mbpo_sac_discrete_experiment.py  rl_experiment.py  rule_based_agent_experiment.py  sac_experiment.py  supervised_experiment.py
models/: base_rl_agent.py  dqn.py  mc_control.py  mlp_sales.py  model.py  oracle.py  replay_buffer.py  td_0.py  ucb.py
models/dqn/: dqn.py  model.py
models/mbpo/: mbpo.py  utils.py
models/rule_based_agent/: rule_based_agent.py
models/sac/: networks.py  sac_discrete.py  utils.py
models/sales/: base_sales_models.py  dataset.py  sales_prediction_models.py  sales_uplift_models.py  utils.py
utils/: buffer.py  config.py  distributions.py  enums.py  logging.py  math.py  misc.py  types.py
(+5 files in other folders)
