[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Gelato_Pricing_Environment"
version = "0.1.0"
description = "A repo containing the gelateria."
readme = "README.md"
requires-python = "==3.9.*"

dependencies = [
    'numpy',
    'pandas',
    'pytorch_lightning',
    'torch',
    'tqdm',
]

[project.optional-dependencies]
dev = [
    'ipython',
    'jupyter',
    'ipykernel',
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
